Center title text when resizing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,7 @@ a {
 .title {
   font-family: 'dtjakobvariableconceptgx';
   font-size: 8em;
+  text-align: center;
   margin: auto 0;
   padding-bottom: 30px;
   color: #666;
