--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,52 @@
   font-weight: normal;
   font-style: normal;
 }
+@media (min-width: 1200px) {
+  html, body {
+    grid-template-rows: 1.1fr 1fr;
+  }
+  .header {
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr .2fr;
+    grid-template-areas: 
+      "image title"
+      ". social";
+  }
+  .content {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 0.1fr;
+    grid-template-areas:
+      "video buy-now"
+      "footer footer";
+  }
+  .social {
+    margin: auto 60px;
+  }
+}
+@media (max-width: 1199px) {
+  html, body {
+    grid-template-rows: 1fr;
+  }
+  .header {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr .2fr;
+    grid-template-areas: 
+      "title"
+      "image"
+      "social";
+  }
+  .content {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.1fr;
+    grid-template-areas:
+      "buy-now"
+      "video"
+      "footer";
+  }
+  .social {
+    margin: auto;
+  }
+}
 html, body {
   display: grid;
   font-family: sans-serif;
@@ -16,7 +62,6 @@ html, body {
   background-repeat: no-repeat;
   height: 100%;
   margin: 0;
-  grid-template-rows: 1.1fr 1fr;
   background-color: black;
 }
 a {
@@ -24,11 +69,6 @@ a {
 }
 .header {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr .2fr;
-  grid-template-areas: 
-    "image title"
-    ". social";
 }
 .title {
   font-family: 'dtjakobvariableconceptgx';
@@ -48,7 +88,6 @@ a {
 }
 .social {
   grid-area: social;
-  margin: auto 60px;
   justify-self: right;
 }
 .social .social-icon {
@@ -66,11 +105,6 @@ a {
 }
 .content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 0.1fr;
-  grid-template-areas:
-    "video buy-now"
-    "footer footer";
   background-image: url(/assets/images/bg-content.jpg);
   box-shadow: 0px -1px 1px black;
 }
