--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,7 +71,7 @@
 html, body {
   display: grid;
   font-family: sans-serif;
-  background-image: url(/assets/images/bg-header.png);
+  background-image: url(/assets/images/bg-header.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
   height: 100%;
