--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,12 @@ a:hover {
   display: grid;
 }
 .title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: 'dtjakobvariableconceptgx';
   text-align: center;
-  margin: auto 0;
-  padding-bottom: 30px;
+  line-height: 1.2;
   color: #666;
   text-shadow: -1px 0 #AAA, 0 1px #AAA, 1px 0 #AAA, 0 -1px #AAA;
 }
@@ -29,6 +31,13 @@ a:hover {
   max-height: 240px;
   max-width: 240px;
   border-radius: 120px;
+}
+.header-image {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  padding: 2vw;
 }
 .social {
   grid-area: social;
@@ -92,8 +101,14 @@ a.embed-link:hover i {
 }
 #prev, #next {
   display: inline-flex;
-  color: white;
+  color: #CCC;
   font-size: 48pt;
+  margin: 0 1vw;
+  display: none;
+}
+#prev:hover, #next:hover {
+  color: white;
+  cursor: pointer;
 }
 /* ------------- */
 .buy-now {
@@ -162,9 +177,6 @@ a.embed-link:hover i {
       "image title"
       ". social";
   }
-  .header-image {
-    margin: auto;
-  }
   .title {
     font-size: 96pt;
   }
@@ -182,12 +194,6 @@ a.embed-link:hover i {
     margin: 4em auto;
   }
 }
-/* In between */
-@media (min-width: 1149px),(max-width: 1280px) {
-  .header-image {
-    margin: auto 5vw;
-  }
-}
 /* For Medium Screens */
 /* --------------------------------- */
 @media (max-width: 1280px) {
@@ -200,9 +206,6 @@ a.embed-link:hover i {
     grid-template-areas: 
     "image title"
     ". social";
-  }
-  .header-image {
-    margin: auto;
   }
   .title {
     font-size: 96pt;
@@ -219,11 +222,6 @@ a.embed-link:hover i {
   }
   .buy-now {
     margin: 4em auto;
-  }
-}
-@media (min-width: 891px), (max-width: 1148px) {
-  .header-image img {
-    margin: 2vh auto;
   }
 }
 /* For small screens */
@@ -264,6 +262,7 @@ a.embed-link:hover i {
     display: none;
   }
 }
+/* --------------------------------- */
 @media (max-width: 1147px) {
   html, body {
     grid-template-rows: 1fr;
@@ -275,11 +274,9 @@ a.embed-link:hover i {
       "image"
       "social";
   }
-  .header-image {
-    margin: auto;
-  }
   .title {
     font-size: 64pt;
+    margin-bottom: 20px;
   }
   .social {
     margin: 0 auto 50px;
@@ -302,4 +299,3 @@ a.embed-link:hover i {
     display: none;
   }
 }
-/* --------------------------------- */
