--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,7 +61,7 @@ a:hover {
 }
 .content {
   display: grid;
-  background-image: url(/assets/images/bg-content.jpg);
+  background-image: url(/assets/images/bg-content.png);
   box-shadow: 0px -1px 1px black;
 }
 .video {
