--- a/src/App.scss
+++ b/src/App.scss
@@ -355,18 +355,19 @@ div.embed-link:hover svg {
     .social {
       margin: 0 auto 50px;
     }
-  }
 
-  .content {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.1fr;
-    grid-template-areas:
-      "buy-now"
-      "video"
-      "footer";
 
-    .buy-now {
-      margin: 3em auto;
+    .content {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 0.1fr;
+      grid-template-areas:
+        "buy-now"
+        "video"
+        "footer";
+
+      .buy-now {
+        margin: 3em auto;
+      }
     }
   }
 }
@@ -382,5 +383,87 @@ div.embed-link:hover svg {
     .video {
       display: none;
     }
+  }
+}
+
+/* --------------------------------- */
+
+// Birthday CSS
+$yellow: #ffd300;
+$blue: #17d3ff;
+$pink: #ff4e91;
+
+$duration: 1000;
+
+@function randomNum($min, $max) {
+  $rand: random();
+  $randomNum: $min + floor($rand * (($max - $min) + 1));
+
+  @return $randomNum;
+}
+
+.cake {
+  position: absolute;
+  left: 50vw;
+  float: left;
+  z-index: 100;
+  color: orange;
+}
+
+.confetti-piece {
+  position: absolute;
+  width: 8px;
+  height: 16px;
+  background: $yellow;
+  top: 0;
+  opacity: 0;
+
+  @for $i from 1 through 13 {
+    &:nth-child(#{$i}) {
+      left: $i * 7%;
+      transform: rotate(#{randomNum(-80, 80)}deg);
+      animation: makeItRain $duration * 1ms infinite ease-out;
+      animation-delay: #{randomNum(0, $duration * .5)}ms;
+      animation-duration: #{randomNum($duration * .7, $duration * 1.2)}ms
+    }
+  }
+
+  &:nth-child(odd) {
+    background: $blue;
+  }
+
+  &:nth-child(even) {
+    z-index: 1;
+  }
+
+  &:nth-child(4n) {
+    width: 5px;
+    height: 12px;
+    animation-duration: $duration * 2ms;
+  }
+
+  &:nth-child(3n) {
+    width: 3px;
+    height: 10px;
+    animation-duration: $duration * 2.5ms;
+    animation-delay: $duration * 1ms;
+  }
+
+  &:nth-child(4n-7) {
+    background: $pink;
+  }
+}
+
+@keyframes makeItRain {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(200px);
   }
 }
